--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "less": "^3.11.1",
+    "less-loader": "^6.0.0",
+    "node-less-chokidar": "^0.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "build-css": "node-less-chokidar src/ src/",
+    "watch-css": "node-less-chokidar src/ src/ --watch",
+    "start-js": "node index.js",
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "npm run build-css && node scripts/build.js"
   },
   "eslintConfig": {
     "extends": "react-app"
